[project]
name = "winwin-image-mirror"
version = "0.1.0"
description = "使用 GitHub Action 将国外 Docker 镜像转存到阿里云私有仓库"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "prettytable>=3.16.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.0",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[project.scripts]
cli = "winwin_image_mirror.main:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # Line too long (CSS selectors, long function signatures)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
